# modern-opencl

./: .gitignore  CMakeLists.txt  README.md  TIPS_AND_TRICKS.md  meson.build  meson.options
include/: .clw_function.hpp.swp  clw_context.hpp  clw_foreign_memory.hpp  clw_function.hpp  clw_helper.hpp  clw_image.hpp  clw_precompiled_function.hpp  clw_stubs.hpp  clw_vector.hpp
src/: clw_context.cpp
tests/: CMakeLists.txt  meson.build  quick_precompiled_test.cpp  quick_test.cpp
tests/test_kernels/: .quick_test.cl.swp  quick_precompiled_test.cl  quick_precompiled_test.clcpp
utility/: multiple_spirv_to_cpp.py  multiple_spirv_to_header.py  spirv_to_header.py
utility/meson/: copy_all_files_from_source_to_destination.py  find_parent_meson_option.py  glob_helper.py  remove_all_files_in_folder.py
